# AGI-CK3

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  prior-art-and-novelty.md  roadmap.md
docs/assets/: README.md
infra/linux/: Dockerfile  RUNBOOK.md  entrypoint.sh
mods/agi_ck3_eval/: README.md  descriptor.mod
mods/agi_ck3_eval/common/decisions/: agi_ck3_eval_decisions.txt
mods/agi_ck3_eval/common/on_action/: agi_ck3_eval_on_actions.txt
mods/agi_ck3_eval/common/script_values/: agi_ck3_eval_values.txt
mods/agi_ck3_eval/common/scripted_effects/: agi3_bridge.txt  agi_ck3_bridge_v2_effects.txt  agi_ck3_eval_effects.txt
mods/agi_ck3_eval/common/scripted_guis/: agi_ck3_event_option_gui.txt
mods/agi_ck3_eval/events/: agi_ck3_eval_events.txt
mods/agi_ck3_eval/localization/english/: agi3_l_english.yml  agi_ck3_eval_l_english.yml
scripts/: mac-year.sh
src/ck3env/: __init__.py  baseline.py  bundle.py  checkpoint.py  cli.py  compile.py  doctor.py  env.py  episode.py  eventgui.py  identity.py  modinstall.py  observe.py  registry.py  score.py  transport.py
submissions/: README.md
tests/: test_ck3env.py  test_identity.py  test_session.py
tests/fixtures/agi3/: debug_log_sample.txt
tests/stories/: test_ck3env_story.py  test_open_arena_story.py
